# grhakarya

./: .dockerignore  .gitignore  .readthedocs.yml  LICENSE.txt  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  grhakarya-0.1.0.tgz  index.yaml
.github/workflows/: cicd.yml
configuration/environment/: .env.prod
database/mysql/data/sql/dev/: dbinit.sql
helm-charts/grhakarya/: Chart.yaml  values.yaml
helm-charts/grhakarya/charts/auth/: values.yaml
helm-charts/grhakarya/charts/mysql/: values.yaml
helm-charts/grhakarya/templates/: _helpers.tpl  namespace.yaml
microservices/auth/: Dockerfile  Dockerfile.production  Dockerfile.test  README.md  pyproject.toml
microservices/auth/configuration/logging/: dev_config.conf  prod_config.conf
microservices/auth/docs/source/: conf.py  index.rst
microservices/auth/src/: main.py
microservices/auth/src/app_logging/: app_logging.py
microservices/auth/src/config/: config.py
microservices/auth/src/dao/: user_dao.py
microservices/auth/src/db/: connection.py  connection_info.py
microservices/auth/src/dependencies/: db_dependency.py  oauth_dependency.py
microservices/auth/src/models/: user_model.py
microservices/auth/src/routers/: sphinx.py  token.py
microservices/auth/src/schemas/: token_schema.py  user_schema.py
microservices/auth/src/service/: token_service.py
microservices/auth/src/utils/: file_helper.py  hashing_helper.py
microservices/auth/tests/: test_main.py
web/: Dockerfile  package-lock.json  web_deployment.yaml  web_environment.yaml  web_service.yaml
(+14 files in other folders)
